--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+.nav-item::after {
+    width: 0%;
+    height: 3px;
+    position: absolute;
+    background: #bb142d;
+    bottom: -2px;
+    content: "";
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    transition: all 300ms ease-in-out;
+  }
+  
+  .nav-item:hover::after {
+    width: 100%;
+  }
