--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,18 @@
   .nav-item:hover::after {
     width: 100%;
   }
+
+.crown {
+  transform: rotate(360deg);
+  /* transition: transform 5s linear infinite; */
+  animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
